# grid_of_life

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  camera.cpp  camera.h  camera.hpp  chunk.cpp  chunk.hpp  coordinate.cpp  cube.cpp  cube.h  cube.hpp  cube_system.cpp  cube_system.hpp  glad.c  grid.cpp  grid.hpp  grid_of_life.10x  imgui.ini  main.cpp  mouse.cpp  mouse.h  opencl_context.cpp  opencl_context.hpp  opencl_grid.c  opengl.h  opengl.hpp  read.cpp  read.h  read.hpp  renderer.cpp  renderer.h  renderer.hpp  sancious_shaders.sln  sancious_shaders.vcxproj  sancious_shaders.vcxproj.filters  save_is_safe.10x  shader.cpp  shader.fs  (+22 more)
.github/workflows/: build.yml
libs/glad/include/glad/: glad.h
shaders/: cubes_shader.fragment_shader  light_shader.fragment_shader  shader.fragment_shader
src/: camera.cpp  camera.hpp  chunk.cpp  chunk.hpp  coordinate.hpp  cube.hpp  cube_system.cpp  cube_system.hpp  glad.c  grid.cpp  grid.hpp  main.cpp  opencl_context.hpp  read.cpp  read.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  shader_program.cpp  state.cpp  state.hpp  texture.cpp  texture.hpp  ui_state.cpp  ui_state.hpp  world.cpp  world.hpp
traces/: 600_iterations_no_border_cubes_chunk_size_16times16.tracy  trace_03_commit_a5fe4a8.tracy  trace_commit_af37824.tracy  trace_commit_b73f63b.tracy
